AD-2004-02-05-2: Bugfix:    Use lock 'LOCK_GLOBAL'.
                 Changed:   qmaster

AD-2004-02-05-1: Bugfix:    All extern functions now lock 'LOCK_GLOBAL'.
                 Changed:   evm

EB-2004-02-05-0: Bugfix:    Changed man page
                 Changed:   sge_types.1

MD-2004-02-05-0: Testsuite: - adapted testsuite to new installation script
                 Bugfix:    - some text
                            - local execd spooldir support
                 Changed:   testsuite, inst_sgeee

SD-2004-02-05-0: Enhancem.: Replaced use of qsub option -p <priority> with
                            -js <job_share> for specifying GEEE job shares
                            to influence the GEEE share tree and functional
                            policies.
                 Changed:   qmaster, schedd, qsub, qalter, qhost, qmon, qsh,
                            qstat, submit(1), user(5)
                 Issue:     636

AD-2004-02-05-0: Bugfix:    If 'sge_mutex_lock/unlock()' do fail, the error
                            code is now part of the log message.
                 Changed:   lck

SG-2004-02-05-0: Enhancem.: updated man pages to reflect my latest changes
                 Changed:   qdel.1, qmod.1, qstat.1, sge_types.1, submit.1

JG-2004-02-05-0: Testsuite: Fixed functional/tight_integration.

JG-2004-02-04-4: Testsuite: Fixed system_tests/clients/qmod/general, del_queue, 
                            cleanup of queue functions.

SG-2004-03-04-1: Bugfix:    the update list event has to be delivered allways.
                            In case, that all elements got removed due to 
                            filtering, the event was not sent. This is changed.
                 Changed:   qmaster
                 Review:    DT

SG-2004-02-04-0: Bugfix:    - qdel "*" deleted only some jobs but not all.
                            - the max deletion time in qmaster is set to 3
                              seconds.
                 Changed:   qdel, qmaster